--- a/app/templates/backtest/index.html
+++ b/app/templates/backtest/index.html
@@ -66,7 +66,7 @@
                             </button>
                         </div>
                         <div class="col-md-2">
-                            <button class="btn btn-outline-purple w-100 mb-2" onclick="quickBacktest('multi_factor')">
+                            <button class="btn btn-outline-success w-100 mb-2" onclick="quickBacktest('multi_factor')">
                                 <div class="text-center">
                                     <i class="bi bi-cpu fs-4"></i>
                                     <div class="small">AI Multi-Factor</div>
@@ -289,16 +289,14 @@
 </div>
 
 <style>
-.btn-outline-purple {
-    color: #6f42c1;
-    border-color: #6f42c1;
+.btn-outline-success {
+    border-color: #2d5016;
+    color: #2d5016;
 }
 
-.btn-outline-purple:hover {
-    background-color: #6f42c1;
-    border-color: #6f42c1;
-    color: white;
-}
+.btn-outline-success:hover {
+    background-color: #2d5016;
+    border-color: #2d5016;
 
 .card {
     border: none;
