--- a/app/templates/base_clean.html
+++ b/app/templates/base_clean.html
@@ -72,13 +72,13 @@
                         <a class="nav-link" href="{{ url_for('main.index') }}"><i class="fas fa-home"></i> Hjem</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('stocks.stocks_overview') }}"><i class="fas fa-chart-bar"></i> Aksjer</a>
+                        <a class="nav-link" href="{{ url_for('stocks.index') }}"><i class="fas fa-chart-bar"></i> Aksjer</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('crypto.crypto_overview') }}"><i class="fab fa-bitcoin"></i> Crypto</a>
+                        <a class="nav-link" href="{{ url_for('stocks.list_crypto') }}"><i class="fab fa-bitcoin"></i> Crypto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('currency.currency_overview') }}"><i class="fas fa-dollar-sign"></i> Valuta</a>
+                        <a class="nav-link" href="{{ url_for('analysis.currency_overview') }}"><i class="fas fa-dollar-sign"></i> Valuta</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('analysis.analysis') }}"><i class="fas fa-brain"></i> Analyse</a>
