--- a/app/templates/base_clean.html
+++ b/app/templates/base_clean.html
@@ -81,7 +81,7 @@
                         <a class="nav-link" href="{{ url_for('analysis.currency_overview') }}"><i class="fas fa-dollar-sign"></i> Valuta</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('analysis.analysis') }}"><i class="fas fa-brain"></i> Analyse</a>
+                        <a class="nav-link" href="{{ url_for('analysis.index') }}"><i class="fas fa-brain"></i> Analyse</a>
                     </li>
                     {% if current_user.is_authenticated %}
                     <li class="nav-item">
