--- a/app/templates/base_clean.html
+++ b/app/templates/base_clean.html
@@ -85,7 +85,7 @@
                     </li>
                     {% if current_user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('portfolio.view_portfolio') }}"><i class="fas fa-briefcase"></i> Portefølje</a>
+                        <a class="nav-link" href="{{ url_for('portfolio.index') }}"><i class="fas fa-briefcase"></i> Portefølje</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('forum.index') }}"><i class="fas fa-comments"></i> Forum</a>
