--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -174,7 +174,7 @@
                                 <i class="fas fa-user"></i> Konto
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="{{ url_for('auth.profile') }}"><i class="fas fa-user-cog"></i> Profil</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('main.profile') }}"><i class="fas fa-user-cog"></i> Profil</a></li>
                                 <li><a class="dropdown-item" href="{{ url_for('pricing.pricing_page') }}"><i class="fas fa-crown"></i> Abonnement</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}"><i class="fas fa-sign-out-alt"></i> Logg ut</a></li>
@@ -962,7 +962,7 @@
                             </a></li>
                             <!-- Prisalarmer removed from here - kept in Konto dropdown to avoid duplicates -->
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="{{ url_for('portfolio.stock_tips') }}">
+                            <li><a class="dropdown-item" href="{{ url_for('portfolio.tips') }}">
                                 <i class="bi bi-lightbulb"></i> Aksjetips
                             </a></li>
                             <li><hr class="dropdown-divider"></li>
