--- a/app/templates/portfolio.html
+++ b/app/templates/portfolio.html
@@ -8,7 +8,7 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="{{ url_for('main.index') }}">Home</a></li>
-                <li class="breadcrumb-item"><a href="{{ url_for('portfolio.portfolio_index') }}">Portfolios</a></li>
+                <li class="breadcrumb-item"><a href="{{ url_for('portfolio.index') }}">Portfolios</a></li>
                 <li class="breadcrumb-item active" aria-current="page">{{ portfolio.name }}</li>
             </ol>
         </nav>
