--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -962,7 +962,7 @@
                             </a></li>
                             <!-- Prisalarmer removed from here - kept in Konto dropdown to avoid duplicates -->
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="{{ url_for('portfolio.tips') }}">
+                            <li><a class="dropdown-item" href="{{ url_for('portfolio.stock_tips') }}">
                                 <i class="bi bi-lightbulb"></i> Aksjetips
                             </a></li>
                             <li><hr class="dropdown-divider"></li>
