--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -323,7 +323,7 @@
           </div>
         </div>
         <div class="card-footer text-center py-2">
-          <a href="{{ url_for('portfolio.tips') }}" class="text-decoration-none">Se alle aksjetips →</a>
+          <a href="{{ url_for('portfolio.stock_tips') }}" class="text-decoration-none">Se alle aksjetips →</a>
         </div>
       </div>
     </div>
