--- a/app/templates/portfolio/add_tip.html
+++ b/app/templates/portfolio/add_tip.html
@@ -61,7 +61,7 @@
                         </div>
 
                         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                            <a href="{{ url_for('portfolio.tips') }}" class="btn btn-secondary me-md-2">
+                            <a href="{{ url_for('portfolio.stock_tips') }}" class="btn btn-secondary me-md-2">
                                 <i class="bi bi-arrow-left me-1"></i>
                                 Tilbake
                             </a>
